fix z-index on searchbar

--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -1,4 +1,5 @@
 .search-container {
+  position: relative;
   height: 75px;
   background-color: white;
   padding: 20px 0;
@@ -90,7 +91,8 @@
 
 #searchlist {
   position: absolute;
-  top: 161px;
+  // top: 161px;
+  top: 115px;
   z-index: 1001;
   line-height: 24px;
   width: 472px;
@@ -185,7 +187,7 @@
     width: 185px;
   }
   #searchlist {
-    top: 172px;
+    // top: 172px;
     // left: 68px;
     width: 395px;
   }
@@ -210,7 +212,7 @@
     height: 35px;
   }
   #searchlist {
-    top: 152px;
+    top: 95px;
     // left: 40px;
     width: 400px;
   }
